# code

./: .gitignore  README.md
c/dsa/invert-binary-tree/: invert_binary_tree.c
c/dsa/max-depth-binary-tree/: max_depth_binary_tree.c
c/dsa/reverse-linked-list/: reverse_linked_list.c
go/: README.md
go/dsa/invert-binary-tree/: go.mod  main.go
go/go-by-example/hello-world/: go.mod
go/go-by-example/values/: go.mod
go/go-by-example/variables/: go.mod
go/leet-code/27-remove-element/: go.mod  main.go
go/leet-code/88-merge-sorted-array/: go.mod  main.go
rust/: README.md
rust/dsa/invert_binary_tree/: Cargo.toml
rust/dsa/max_depth_binary_tree/: Cargo.toml
rust/fork_bomb/: Cargo.toml
rust/fork_bomb/src/: main.rs
rust/sql_and_rust/: Cargo.toml  README.md  docker-compose.yml
rust/sql_and_rust/migrations/: 0001_init.sql  0002_seed.sql
rust/sql_and_rust/src/: lib.rs
rust/the_rust_programming_language/hello_world/: main  main.rs
rust/the_rust_programming_language/object_oriented_programming_features/: Cargo.toml
rust/the_rust_programming_language/using_structs_to_structure_related_data/: Cargo.toml
rust/the_rust_programming_language/writing_automated_tests/: Cargo.toml
typescript/: package-lock.json  package.json  tsconfig.json
typescript/dsa/invert-binary-tree/: main.ts
typescript/dsa/max-depth-binary-tree/: main.ts
typescript/dsa/reverse-linked-list/: main.ts
zig/dsa/invert-binary-tree/: invert_binary_tree.zig
zig/dsa/max-depth-binary-tree/: max_depth_binary_tree.zig
zig/dsa/reverse-linked-list/: reverse_linked_list.zig
(+7 files in other folders)
